Helping the old thinkpad