@@ -3,6 +3,7 @@
 public class Main {
 
     public static void main(String[] args) {
+        //--module-path C:\Users\JesperBlom\Documents\GitHub\Prog4Sec_EXM_2\JavaAddOns\JavaFXDir\javafx-sdk-17.0.2\lib --add-modules javafx.controls
 
     }
 }
